They have moved to https://github.com/plume-lib/checklink .

===========================================================================

plume-lib 1.2.0, released February 1, 2018

The HtmlPrettyPrint program has been removed and moved to its own repository:
https://github.com/plume-lib/html-pretty-print

StringBuilderDelimited's append() methods have been deprecated in favor of
add(), in order to conform to the interface of StringJoiner.

Many other bug fixes and minor enhancements, but no major new features.

===========================================================================

plume-lib 1.1.2, released June 30, 2017

Add a new plume-core.jar target, which is substantially smaller than
plume.jar.

Many other bug fixes and minor enhancements, but no major new features.

===========================================================================

plume-lib 1.1.1, released January 2, 2017

The plume-lib homepage has moved to https://mernst.github.io/plume-lib/

plume-lib is being gradually split up into multiple smaller projects.
Some parts of it can now be found elsewhere, for example:
 * https://github.com/plume-lib/run-google-java-format

Many bug fixes, but no major new features.

===========================================================================

plume-lib 1.1.0, released August 17, 2016

Programs run-google-java-format.py and check-google-java-format.py are
wrappers for the google-java-format program.  That program creates poor
formatting for annotations, particularly for type annotations and for
annotations in comments.  The run-google-java-format.py wrapper runs
google-java-format and then improves formatting of annotations.  The
check-google-java-format.py wrapper reports any files that would be
reformatted by run-google-java-format.py program, and returns non-zero
status if there were any.

Deprecated the search program in favor of ag.  ag is faster.  A limitation
of ag is that, contrary to its documentation, it does not search within