@@ -58,7 +58,7 @@ public class StringBuilderDelimited implements Appendable, CharSequence {
    *
    * @param str the string to append to this StringBuilderDelimited
    * @return a reference to this StringBuilderDelimited
-   * @deprecated Use #add(CharSequence)
+   * @deprecated Use #add(CharSequence); change sbd.append(str) into sbd.add(str)
    */
   @Deprecated
   public StringBuilderDelimited append(/*@Nullable*/ String str) {
@@ -72,7 +72,7 @@ public class StringBuilderDelimited implements Appendable, CharSequence {
    *
    * @param o the object whose toString() to append to this StringBuilderDelimited
    * @return a reference to this StringBuilderDelimited
-   * @deprecated Use #add(CharSequence)
+   * @deprecated Use #add(CharSequence); change sbd.append(o) into sbd.add(o.toString())
    */
   @Deprecated
   public StringBuilderDelimited append(/*@Nullable*/ Object o) {
@@ -86,7 +86,7 @@ public class StringBuilderDelimited implements Appendable, CharSequence {
    *
    * @param c the character to append to this StringBuilderDelimited
    * @return a reference to this StringBuilderDelimited
-   * @deprecated Use #add(CharSequence)
+   * @deprecated Use #add(CharSequence); change sbd.append(c) into sbd.add(c.toString())
    */
   @Deprecated
   @Override
@@ -101,7 +101,7 @@ public class StringBuilderDelimited implements Appendable, CharSequence {
    *
    * @param csq the character sequence to append to this StringBuilderDelimited
    * @return a reference to this StringBuilderDelimited
-   * @deprecated Use #add(CharSequence)
+   * @deprecated Use #add(CharSequence); change sbd.append(csq) into sbd.add(csq)
    */
   @Deprecated
   @Override
@@ -111,7 +111,10 @@ public class StringBuilderDelimited implements Appendable, CharSequence {
     return this;
   }
 
-  /** @deprecated Use #add(CharSequence) */
+  /**
+   * @deprecated Use #add(CharSequence); change sbd.append(csq, start, end) into
+   *     sbd.add(csq.subSequence(start, end)
+   */
   @Deprecated
   @Override
   public StringBuilderDelimited append(
